--- a/index.html
+++ b/index.html
@@ -125,7 +125,31 @@
 
 
 
+    <!-- start works -->
+    <div class="container0-works">
+        <div class="container1-works">
+            <div class="name-works">
+                <h3>خدمات أعمال</h3>
+                <button>عرض الجميع</button>
+            </div>
+            <div class="items-works">
+                <div class="item-works">
+                    <img src="./images/4e2de2b126a5ee48544307d3c8cfad23_thumb.jpg" alt="work image">
+                    <h4><a href="#">إنشاء الأبحاث القانونية فى كافة فروع القانون</a></h4>
+                    <p>أعمال / بحوث قانونية</p>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <span> (40)</span>
+                    <p>تبدأ من 45.00$</p>
+                </div>
+            </div>
+        </div>
+    </div>
     
+    <!-- end works -->
 
 
 
