--- a/index.html
+++ b/index.html
@@ -8,9 +8,29 @@
     <link rel="stylesheet" href="./css/all.css">
 </head>
 <body>
-    <!-- start navBar -->
 
-    <!-- end navBar -->
+
+
+
+    <!-- start nav -->
+    <div class="container-nav">
+        <a href="" class="link1"><i class="fa-solid fa-list"></i></a>
+        <a href="" class="link2"><img src="./images/logo-73045c76e830509d4dbe03ea6172d22f047c708fed5435e93ffd47f80ee5ffa4.png" alt="logo"></a>
+        <a href="" class="link3">التصنيفات<i class="fa-solid fa-boxes-stacked"></i></a>
+        <a href="" class="link4">المشتريات<i class="fa-solid fa-cart-shopping"></i></a>
+        <a href="" class="link5"><img src="./images/448b8cf783df4d76351a1011bda55a95.png" alt="person"></a>
+        <a href="" class="link6"><i class="fa-solid fa-bell"></i></a>
+        <a href="" class="link7"><i class="fa-solid fa-envelope"></i></a>
+        <a href="" class="link8"><i class="fa-solid fa-cart-shopping"></i></a>
+        <a href="" class="link9"><i class="fa-solid fa-magnifying-glass"></i></a>
+    </div>
+
+    <!-- end nav -->
+
+
+
+
+
 
 
 
@@ -136,19 +156,128 @@
                 <div class="item-works">
                     <img src="./images/4e2de2b126a5ee48544307d3c8cfad23_thumb.jpg" alt="work image">
                     <h4><a href="#">إنشاء الأبحاث القانونية فى كافة فروع القانون</a></h4>
-                    <p>أعمال / بحوث قانونية</p>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <span> (40)</span>
-                    <p>تبدأ من 45.00$</p>
+                    <p class="sections-works">أعمال / بحوث قانونية</p>
+                    <div class="rate-works">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <span> (40)</span>
+                    </div>
+                    <p class="price-works">تبدأ من 45.00$</p>
+                </div>
+                <div class="item-works">
+                    <img src="./images/4e2de2b126a5ee48544307d3c8cfad23_thumb.jpg" alt="work image">
+                    <h4><a href="#">إنشاء الأبحاث القانونية فى كافة فروع القانون</a></h4>
+                    <p class="sections-works">أعمال / بحوث قانونية</p>
+                    <div class="rate-works">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <span> (40)</span>
+                    </div>
+                    <p class="price-works">تبدأ من 45.00$</p>
+                </div>
+                <div class="item-works">
+                    <img src="./images/4e2de2b126a5ee48544307d3c8cfad23_thumb.jpg" alt="work image">
+                    <h4><a href="#">إنشاء الأبحاث القانونية فى كافة فروع القانون</a></h4>
+                    <p class="sections-works">أعمال / بحوث قانونية</p>
+                    <div class="rate-works">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <span> (40)</span>
+                    </div>
+                    <p class="price-works">تبدأ من 45.00$</p>
+                </div>
+                <div class="item-works">
+                    <img src="./images/4e2de2b126a5ee48544307d3c8cfad23_thumb.jpg" alt="work image">
+                    <h4><a href="#">إنشاء الأبحاث القانونية فى كافة فروع القانون</a></h4>
+                    <p class="sections-works">أعمال / بحوث قانونية</p>
+                    <div class="rate-works">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <span> (40)</span>
+                    </div>
+                    <p class="price-works">تبدأ من 45.00$</p>
                 </div>
             </div>
         </div>
     </div>
-    
+    <div class="container0-works">
+        <div class="container1-works">
+            <div class="name-works">
+                <h3>خدمات أعمال</h3>
+                <button>عرض الجميع</button>
+            </div>
+            <div class="items-works">
+                <div class="item-works">
+                    <img src="./images/4e2de2b126a5ee48544307d3c8cfad23_thumb.jpg" alt="work image">
+                    <h4><a href="#">إنشاء الأبحاث القانونية فى كافة فروع القانون</a></h4>
+                    <p class="sections-works">أعمال / بحوث قانونية</p>
+                    <div class="rate-works">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <span> (40)</span>
+                    </div>
+                    <p class="price-works">تبدأ من 45.00$</p>
+                </div>
+                <div class="item-works">
+                    <img src="./images/4e2de2b126a5ee48544307d3c8cfad23_thumb.jpg" alt="work image">
+                    <h4><a href="#">إنشاء الأبحاث القانونية فى كافة فروع القانون</a></h4>
+                    <p class="sections-works">أعمال / بحوث قانونية</p>
+                    <div class="rate-works">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <span> (40)</span>
+                    </div>
+                    <p class="price-works">تبدأ من 45.00$</p>
+                </div>
+                <div class="item-works">
+                    <img src="./images/4e2de2b126a5ee48544307d3c8cfad23_thumb.jpg" alt="work image">
+                    <h4><a href="#">إنشاء الأبحاث القانونية فى كافة فروع القانون</a></h4>
+                    <p class="sections-works">أعمال / بحوث قانونية</p>
+                    <div class="rate-works">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <span> (40)</span>
+                    </div>
+                    <p class="price-works">تبدأ من 45.00$</p>
+                </div>
+                <div class="item-works">
+                    <img src="./images/4e2de2b126a5ee48544307d3c8cfad23_thumb.jpg" alt="work image">
+                    <h4><a href="#">إنشاء الأبحاث القانونية فى كافة فروع القانون</a></h4>
+                    <p class="sections-works">أعمال / بحوث قانونية</p>
+                    <div class="rate-works">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <span> (40)</span>
+                    </div>
+                    <p class="price-works">تبدأ من 45.00$</p>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- end works -->
 
 
